--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(101, 253, 165);
+  background-color: rgb(0, 0, 0)
 }
 
 code {
@@ -26,14 +26,16 @@ h1{
 
 .todoList{
   width: 500px;
-  border: 2px solid rgb(0, 180, 252);
+  border: 2px solid rgb(245, 247, 248);
   margin: 20px; 
   padding: 10px;
   margin: 200px auto;
-  background-color: rgb(205, 248, 255);
-  box-shadow: 0px 0px 50px rgb(19, 188, 255);
+  background-color: rgb(249, 251, 252);
+  
 }
-
+.fas fa-trash-alt button {
+  background-color: yellow;
+}
 
 
 .form{
@@ -45,18 +47,18 @@ h1{
   width: 70%;
   height: 30px;
   padding-left: 10px;
-  border-color: rgb(53, 188, 241);;
+  border-color: rgb(0, 0, 0);;
 }
+
 .form button{
   width: 20%;
   margin: 3%;
   height: 30px;
-  background-color: rgb(53, 188, 241);
+  background-color: rgb(0, 172, 240);
   border: none;
   border-radius: 5px;
   
 }
-
 .fas{
   color: red;
   padding: 10px;
@@ -64,7 +66,7 @@ h1{
 
 .listText{
   text-transform: capitalize;
-  color: rgb(53, 188, 241);
+  color: rgb(0, 0, 0);
   padding-left: 15px;
   width: 80%;
   float: left;
@@ -75,4 +77,50 @@ h1{
 
 .flex{
   margin-bottom: 20px;
+}
+
+  
+.butt{
+  position: relative;
+  height: 40px;
+  width: 50px;
+  border: none;
+  outline: none;
+  color: rgb(0, 0, 0);
+  background: rgb(252, 250, 250);
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+  border-radius: 10px;
+}
+.butt:before{
+  position: absolute;
+  content: '';
+  top: -2px;
+  left: -2px;
+  height: calc(100% + 4px);
+  width: calc(100% + 4px);
+  border-radius: 10px;
+  z-index: -1;
+  opacity: 0;
+  filter: blur(5px);
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  background-size: 400%;
+  transition: opacity .3s ease-in-out;
+  animation: animate 60s linear infinite;
+}
+.butt:hover:before{
+  opacity: 1;
+}
+.butt:hover:active{
+  background: none;
+}
+.butt:hover:active:before{
+  filter: blur(2px);
+}
+@keyframes animate {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
 }
